--- a/docs/docs/cmd/booking/business/business-list.mdx
+++ b/docs/docs/cmd/booking/business/business-list.mdx
@@ -16,6 +16,24 @@ m365 booking business list [options]
 
 <Global />
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions       |
+  |-----------------|-------------------|
+  | Microsoft Graph | Bookings.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions       |
+  |-----------------|-------------------|
+  | Microsoft Graph | Bookings.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Returns a list of all Microsoft Bookings businesses that are created for the tenant.
@@ -73,4 +91,3 @@ m365 booking business list
   
   </TabItem>
 </Tabs>
-
