--- a/docs/docs/cmd/graph/openextension/openextension-get.mdx
+++ b/docs/docs/cmd/graph/openextension/openextension-get.mdx
@@ -31,21 +31,16 @@ m365 graph openextension get [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions        |
-  |-----------------|--------------------|
-  | Microsoft Graph | User.Read          |
-  | Microsoft Graph | Group.Read.All     |
-  | Microsoft Graph | Directory.Read.All |
+  | Resource        | Permissions                                   |
+  |-----------------|-----------------------------------------------|
+  | Microsoft Graph | Directory.Read.All, Group.Read.All, User.Read |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions           |
-  |-----------------|-----------------------|
-  | Microsoft Graph | User.Read.All         |
-  | Microsoft Graph | Group.Read.All        |
-  | Microsoft Graph | Device.Read.All       |
-  | Microsoft Graph | Organization.Read.All |
+  | Resource        | Permissions                                                           |
+  |-----------------|-----------------------------------------------------------------------|
+  | Microsoft Graph | Device.Read.All, Group.Read.All, Organization.Read.All, User.Read.All |
 
   </TabItem>
 </Tabs>
