--- a/docs/docs/cmd/graph/openextension/openextension-set.mdx
+++ b/docs/docs/cmd/graph/openextension/openextension-set.mdx
@@ -54,22 +54,16 @@ If a property of the open extension is not specified and `keepUnchangedPropertie
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions                |
-  |-----------------|----------------------------|
-  | Microsoft Graph | User.ReadWrite             |
-  | Microsoft Graph | Group.ReadWrite.All        |
-  | Microsoft Graph | Directory.AccessAsUser.All |
-  | Microsoft Graph | Organization.ReadWrite.All |
+  | Resource        | Permissions                                                                                 |
+  |-----------------|---------------------------------------------------------------------------------------------|
+  | Microsoft Graph | Directory.AccessAsUser.All, Group.ReadWrite.All, Organization.ReadWrite.All, User.ReadWrite |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions                |
-  |-----------------|----------------------------|
-  | Microsoft Graph | User.ReadWrite.All         |
-  | Microsoft Graph | Group.ReadWrite.All        |
-  | Microsoft Graph | Device.ReadWrite.All       |
-  | Microsoft Graph | Organization.ReadWrite.All |
+  | Resource        | Permissions                                                                               |
+  |-----------------|-------------------------------------------------------------------------------------------|
+  | Microsoft Graph | Device.ReadWrite.All, Group.ReadWrite.All, Organization.ReadWrite.All, User.ReadWrite.All |
 
   </TabItem>
 </Tabs>
