--- a/docs/docs/cmd/entra/app/app-get.mdx
+++ b/docs/docs/cmd/entra/app/app-get.mdx
@@ -49,6 +49,24 @@ If you want to store the information about the Entra app registration, use the `
 
 Using the `--properties` option, you can specify a comma-separated list of app properties to retrieve from the Microsoft Graph. If you don't specify any properties, the command will output the default properties returned by Graph.
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get the Entra application registration by its app (client) ID.
