--- a/docs/docs/cmd/entra/app/app-list.mdx
+++ b/docs/docs/cmd/entra/app/app-list.mdx
@@ -31,6 +31,24 @@ m365 entra appregistration list [options]
 
 Using the `--properties` option, you can specify a comma-separated list of app properties to retrieve from the Microsoft Graph. If you don't specify any properties, the command will output the default properties returned by Graph.
 
+## Permissions
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions          |
+  |-----------------|----------------------|
+  | Microsoft Graph | Application.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Retrieve a list of Entra app registrations.
@@ -202,4 +220,3 @@ m365 entra app list --properties "appId,displayName"
 
   </TabItem>
 </Tabs>
-
