Resolving comments from Martin

--- a/docs/docs/cmd/entra/m365group/m365group-recyclebinitem-restore.mdx
+++ b/docs/docs/cmd/entra/m365group/m365group-recyclebinitem-restore.mdx
@@ -32,16 +32,16 @@ m365 entra m365group recyclebinitem restore [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions                 |
-  |-----------------|-----------------------------|
-  | Microsoft Graph | User.DeleteRestore.All |
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions                 |
-  |-----------------|-----------------------------|
-  | Microsoft Graph | User.DeleteRestore.All |
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Group.ReadWrite.All |
 
   </TabItem>
 </Tabs>
