feat(app-permission-add):Add permissions section with Microsoft Graph permissions to the documentation

--- a/docs/docs/cmd/entra/app/app-permission-add.mdx
+++ b/docs/docs/cmd/entra/app/app-permission-add.mdx
@@ -46,6 +46,25 @@ m365 entra appregistration permission add [options]
 
 Scopes/Roles to grant must be fully-qualified so that we can disambiguate them between the different resources.
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource         | Permissions               |
+  |------------------|---------------------------|
+  | Microsoft Graph  | Application.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource         | Permissions               |
+  |------------------|---------------------------|
+  | Microsoft Graph  | Application.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Grant multiple delegated API permissions to a Microsoft Entra app specified by client id.
