--- a/docs/docs/cmd/entra/app/app-permission-remove.mdx
+++ b/docs/docs/cmd/entra/app/app-permission-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # entra app permission remove
 
@@ -40,6 +42,25 @@ m365 entra app permission remove [options]
 ## Remarks
 
 Removing permissions on App Registrations does not immediately remove consent given by an administrator. Explicitly instruct the CLI to revoke consent by using the `--revokeAdminConsent` flag.
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource         | Permissions               |
+  |------------------|---------------------------|
+  | Microsoft Graph  | Application.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource         | Permissions               |
+  |------------------|---------------------------|
+  | Microsoft Graph  | Application.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Examples
 
