feat(app-permission-remove): Add permissions section for Microsoft Graph resources

--- a/docs/docs/cmd/entra/app/app-permission-remove.mdx
+++ b/docs/docs/cmd/entra/app/app-permission-remove.mdx
@@ -41,6 +41,25 @@ m365 entra app permission remove [options]
 
 Removing permissions on App Registrations does not immediately remove consent given by an administrator. Explicitly instruct the CLI to revoke consent by using the `--revokeAdminConsent` flag.
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource         | Permissions               |
+  |------------------|---------------------------|
+  | Microsoft Graph  | Application.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource         | Permissions               |
+  |------------------|---------------------------|
+  | Microsoft Graph  | Application.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Remove multiple delegated API permissions from an Entra app registration
