--- a/docs/docs/cmd/outlook/message/message-get.mdx
+++ b/docs/docs/cmd/outlook/message/message-get.mdx
@@ -32,16 +32,16 @@ m365 outlook message get [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource        | Permissions               |
-  |-----------------|---------------------------|
-  | Microsoft Graph | Mail.ReadBasic, Mail.Read |
+  | Resource        | Permissions    |
+  |-----------------|----------------|
+  | Microsoft Graph | Mail.ReadBasic |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource        | Permissions                    |
-  |-----------------|--------------------------------|
-  | Microsoft Graph | Mail.ReadBasic.All, Mail.Read  |
+  | Resource        | Permissions         |
+  |-----------------|---------------------|
+  | Microsoft Graph | Mail.ReadBasic.All  |
 
   </TabItem>
 </Tabs>
