Added minimal permissions for 'entra administrativeunit' commands. Closes #6921

--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-list.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-list.mdx
@@ -25,6 +25,25 @@ m365 entra administrativeunit list [options]
 
 Using the `--properties` option, you can specify a comma-separated list of administrative unit properties to retrieve from the Microsoft Graph. If you don't specify any properties, the command will output the default properties returned by Graph.
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | AdministrativeUnit.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | AdministrativeUnit.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Retrieve a list of administrative units.
