--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-remove.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-remove.mdx
@@ -1,4 +1,6 @@
 import Global from '/docs/cmd/_global.mdx';
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
 
 # entra administrativeunit remove
 
@@ -32,6 +34,25 @@ m365 entra administrativeunit remove [options]
 To use this command you must be either **Global Administrator** or **Privileged Role Administrator**.
 
 :::
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                      |
+  |-----------------|----------------------------------|
+  | Microsoft Graph | AdministrativeUnit.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                      |
+  |-----------------|----------------------------------|
+  | Microsoft Graph | AdministrativeUnit.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
 
 ## Examples
 
