--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-roleassignment-add.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-roleassignment-add.mdx
@@ -44,6 +44,25 @@ To use this command you must be either **Global Administrator** or **Privileged 
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                        |
+  |-----------------|------------------------------------|
+  | Microsoft Graph | RoleManagement.ReadWrite.Directory |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                        |
+  |-----------------|------------------------------------|
+  | Microsoft Graph | RoleManagement.ReadWrite.Directory |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Assign a role definition specified by id to a user specified by id for an administrative unit specified by id
