--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-add.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-add.mdx
@@ -35,6 +35,25 @@ To use this command you must be either **Global Administrator** or **Privileged 
 
 :::
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                      |
+  |-----------------|----------------------------------|
+  | Microsoft Graph | AdministrativeUnit.ReadWrite.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                      |
+  |-----------------|----------------------------------|
+  | Microsoft Graph | AdministrativeUnit.ReadWrite.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Create an administrative unit with a specific display name
