--- a/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-list.mdx
+++ b/docs/docs/cmd/entra/administrativeunit/administrativeunit-member-list.mdx
@@ -39,6 +39,25 @@ To list the members of a hidden membership in an administrative unit, the `Membe
 
 When the `properties` option includes values with a `/`, for example: `manager/displayName`, an additional `$expand` query parameter will be included on manager.
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | AdministrativeUnit.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource        | Permissions                 |
+  |-----------------|-----------------------------|
+  | Microsoft Graph | AdministrativeUnit.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 List members of an administrative unit specified by id
