Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -48,6 +48,9 @@ sidebar_position: 4
 - added minimal permissions for 'purview retentionlabel' commands [#6987](https://github.com/pnp/cli-microsoft365/issues/6987)
 - added minimal permissions for 'purview sensitivitylabel' commands [#6988](https://github.com/pnp/cli-microsoft365/issues/6988)
 - added minimal permissions for 'purview threatassessment' commands [#6989](https://github.com/pnp/cli-microsoft365/issues/6989)
+- updated 'spfx project upgrade' to support 'spfx-fast-serve-helpers' for all versions [#6802](https://github.com/pnp/cli-microsoft365/issues/6802)
+- added minimal permissions for 'entra administrativeunit member' commands [#6922](https://github.com/pnp/cli-microsoft365/issues/6922)
+- added minimal permissions for 'entra administrativeunit' commands [#6921](https://github.com/pnp/cli-microsoft365/issues/6921)
 
 ## [v11.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.0.0)
 
