Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -52,6 +52,10 @@ sidebar_position: 4
 - updated 'spfx project upgrade' to support 'spfx-fast-serve-helpers' for all versions [#6802](https://github.com/pnp/cli-microsoft365/issues/6802)
 - added minimal permissions for 'entra administrativeunit member' commands [#6922](https://github.com/pnp/cli-microsoft365/issues/6922)
 - added minimal permissions for 'entra administrativeunit' commands [#6921](https://github.com/pnp/cli-microsoft365/issues/6921)
+- migrated [entra license list](../cmd/entra/license-list.mdx) to Zod [#6905](https://github.com/pnp/cli-microsoft365/issues/6905)
+- added minimal permissions for 'entra m365group recyclebinitem' commands [#6941](https://github.com/pnp/cli-microsoft365/issues/6941)
+- added minimal permissions for 'entra app' commands [#6923](https://github.com/pnp/cli-microsoft365/issues/6923)
+- added minimal permissions for 'outlook mail', 'outlook mailbox', 'outlook room' commands [#6983](https://github.com/pnp/cli-microsoft365/issues/6983)
 
 ## [v11.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.0.0)
 
