Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -56,6 +56,9 @@ sidebar_position: 4
 - added minimal permissions for 'entra m365group recyclebinitem' commands [#6941](https://github.com/pnp/cli-microsoft365/issues/6941)
 - added minimal permissions for 'entra app' commands [#6923](https://github.com/pnp/cli-microsoft365/issues/6923)
 - added minimal permissions for 'outlook mail', 'outlook mailbox', 'outlook room' commands [#6983](https://github.com/pnp/cli-microsoft365/issues/6983)
+- migrated [pp gateway list](../cmd/pp/gateway/gateway-list.mdx) to Zod [#6893](https://github.com/pnp/cli-microsoft365/issues/6893)
+- migrated [pp tenant settings list](../cmd/pp/tenant/tenant-settings-list.mdx) to Zod [#6894](https://github.com/pnp/cli-microsoft365/issues/6894)
+- migrated [logout](../cmd/logout.mdx) to Zod [#6914](https://github.com/pnp/cli-microsoft365/issues/6914)
 
 ## [v11.0.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.0.0)
 
