[Docs] Add minimal permissions for 'entra groupsettingtemplate get' command
Added a ‘Permissions’ section with minimal delegated and application permissions 
for the m365 entra groupsettingtemplate get command.

--- a/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx
+++ b/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx
@@ -24,6 +24,14 @@ m365 entra groupsettingtemplate get [options]
 
 <Global />
 
+## Permissions
+
+### Delegated (work or school account)
+- Directory.Read.All
+
+### Application
+- Directory.Read.All
+
 ## Examples
 
 Get information about the group setting template with id _62375ab9-6b52-47ed-826b-58e47e0e304b_
