Adds minimal permissions for 'entra groupsettingtemplate' commands. Closes #6938

--- a/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx
+++ b/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx
@@ -24,6 +24,25 @@ m365 entra groupsettingtemplate get [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource         | Permissions            |
+  |------------------|------------------------|
+  | Microsoft Graph  | GroupSettings.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource         | Permissions            |
+  |------------------|------------------------|
+  | Microsoft Graph  | GroupSettings.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 Get information about the group setting template with id _62375ab9-6b52-47ed-826b-58e47e0e304b_
