--- a/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-list.mdx
+++ b/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-list.mdx
@@ -16,6 +16,27 @@ m365 entra groupsettingtemplate list [options]
 
 <Global />
 
+## Permissions
+
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource         | Permissions            |
+  |------------------|------------------------|
+  | Microsoft Graph  | GroupSettings.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource         | Permissions            |
+  |------------------|------------------------|
+  | Microsoft Graph  | GroupSettings.Read.All |
+
+  </TabItem>
+</Tabs>
+
 ## Examples
 
 List all group setting templates in the tenant
