docs: update permissions format for entra groupsettingtemplate-get

--- a/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx
+++ b/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx
@@ -26,11 +26,23 @@ m365 entra groupsettingtemplate get [options]
 
 ## Permissions
 
-### Delegated (work or school account)
-- Directory.Read.All
+<Tabs>
+  <TabItem value="Delegated">
 
-### Application
-- Directory.Read.All
+  | Resource         | Permissions      |
+  |------------------|------------------|
+  | Microsoft Graph  | Directory.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource         | Permissions      |
+  |------------------|------------------|
+  | Microsoft Graph  | Directory.Read.All |
+
+  </TabItem>
+</Tabs>
+
 
 ## Examples
 
