--- a/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-list.mdx
+++ b/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-list.mdx
@@ -16,6 +16,26 @@ m365 entra groupsettingtemplate list [options]
 
 <Global />
 
+## Permissions
+
+<Tabs>
+  <TabItem value="Delegated">
+
+  | Resource         | Permissions      |
+  |------------------|------------------|
+  | Microsoft Graph  | Directory.Read.All |
+
+  </TabItem>
+  <TabItem value="Application">
+
+  | Resource         | Permissions      |
+  |------------------|------------------|
+  | Microsoft Graph  | Directory.Read.All |
+
+  </TabItem>
+</Tabs>
+
+
 ## Examples
 
 List all group setting templates in the tenant
