docs: update permissions to least privileged GroupSettings.Read.All

--- a/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx
+++ b/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-get.mdx
@@ -29,20 +29,19 @@ m365 entra groupsettingtemplate get [options]
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource         | Permissions      |
-  |------------------|------------------|
-  | Microsoft Graph  | Directory.Read.All |
+  | Resource         | Permissions            |
+  |------------------|------------------------|
+  | Microsoft Graph  | GroupSettings.Read.All |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource         | Permissions      |
-  |------------------|------------------|
-  | Microsoft Graph  | Directory.Read.All |
+  | Resource         | Permissions            |
+  |------------------|------------------------|
+  | Microsoft Graph  | GroupSettings.Read.All |
 
   </TabItem>
 </Tabs>
-
 
 ## Examples
 
