docs: update permissions to least privileged GroupSettings.Read.All

--- a/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-list.mdx
+++ b/docs/docs/cmd/entra/groupsettingtemplate/groupsettingtemplate-list.mdx
@@ -18,23 +18,24 @@ m365 entra groupsettingtemplate list [options]
 
 ## Permissions
 
+## Permissions
+
 <Tabs>
   <TabItem value="Delegated">
 
-  | Resource         | Permissions      |
-  |------------------|------------------|
-  | Microsoft Graph  | Directory.Read.All |
+  | Resource         | Permissions            |
+  |------------------|------------------------|
+  | Microsoft Graph  | GroupSettings.Read.All |
 
   </TabItem>
   <TabItem value="Application">
 
-  | Resource         | Permissions      |
-  |------------------|------------------|
-  | Microsoft Graph  | Directory.Read.All |
+  | Resource         | Permissions            |
+  |------------------|------------------------|
+  | Microsoft Graph  | GroupSettings.Read.All |
 
   </TabItem>
 </Tabs>
-
 
 ## Examples
 
