Updates release notes

--- a/docs/docs/about/release-notes.mdx
+++ b/docs/docs/about/release-notes.mdx
@@ -4,6 +4,19 @@ sidebar_position: 4
 
 # Release notes
 
+## v11.2.0 (Beta)
+
+### New commands
+
+**SharePoint:**
+
+- [spo site versionpolicy get](../cmd/spo/site/site-versionpolicy-get.mdx) - retrieves the version policy settings of a specific site [#6750](https://github.com/pnp/cli-microsoft365/issues/6750)
+
+### Changes
+
+- migrated [docs](../cmd/docs.mdx) to Zod [#6915](https://github.com/pnp/cli-microsoft365/issues/6915)
+- migrated [entra multitenant add](../cmd/entra/multitenant/multitenant-add.mdx) to Zod [#6906](https://github.com/pnp/cli-microsoft365/issues/6906)
+
 ## [v11.1.0](https://github.com/pnp/cli-microsoft365/releases/tag/v11.1.0)
 
 ### New commands
